--- a/premedia/edetailers/scss/navbar.scss
+++ b/premedia/edetailers/scss/navbar.scss
@@ -57,6 +57,8 @@ nav {
 				border-bottom: 3px solid $transparent;
 				transition: all .1s $easeInOut;
 				transition-delay: .4s;
+				position: relative;
+				z-index: 5;
 
 				a {
 					font-size: .9em;
