--- a/premedia/edetailers/scss/sections/certifications.scss
+++ b/premedia/edetailers/scss/sections/certifications.scss
@@ -1,7 +1,6 @@
 #certifications {
 	background-color: #EFEFEF;
 	position: relative;
-	padding-bottom: 10em;
 	.section-title {
 		margin-bottom: 5em;
 	}
@@ -102,16 +101,16 @@
 
 			.close-btn {
 				position: absolute;
-				top: -3.25em;
-				right: -2.5em;
-				color: #FFF;
+				top: 0;
+				right: 1em;
+				color: #AAA;
 				cursor: pointer;
 				z-index: 10;
 				span {
 					font-size: 3em;
 				}
 				&:hover {
-					color: #9a9a9a;
+					color: #767676;
 				}
 			}
 		}
