--- a/premedia/edetailers/scss/sections/contact.scss
+++ b/premedia/edetailers/scss/sections/contact.scss
@@ -6,7 +6,6 @@
 		width: 100%;
 	}
 	.grid {
-		padding-top: 3em;
 		.column {
 			padding: 0;
 		}
@@ -17,6 +16,9 @@
 		}
 		.contact-info{
 			border-right: 2px solid white;
+			h2 {
+				margin: 0 0 2em;
+			}
 			p {
 				line-height: initial;
 				margin: .5em 0;
@@ -195,13 +197,16 @@
 	}
 	@include mobile {
 		.grid {
-			padding-top: 0;
 			.column {
 				h3 {
 					padding-top: 1.5em
 				}
 				&.contact-info {
 					border: none;
+					h2 {
+						text-align: center;
+						margin-bottom: 0;
+					}
 					br {
 						display: none;
 					}
