--- a/premedia/edetailers/scss/sections/edetailers.scss
+++ b/premedia/edetailers/scss/sections/edetailers.scss
@@ -1,4 +1,12 @@
 #eDetailers {
+	align-items: flex-end;
+	// preload images hack
+	.slide-container:before {
+		background-image: url('../img/slides/slide1.jpg'), url('../img/slides/slide2.jpg'), url('../img/slides/slide3.jpg');
+		position: absolute;
+		opacity: 0;
+		left: 999em;
+	}
 	.info-panel {
 		margin-right: 1em;
 		background-color: $lightGray;
@@ -20,7 +28,6 @@
 	.image-panel {
 		display: flex;
 		align-items: flex-end;
-		// padding: 1em 0 0 1em;
 		img:first-of-type {
 			width: calc(60% - 1em);
 			padding-right: 1em;
