--- a/premedia/edetailers/scss/sections/contact.scss
+++ b/premedia/edetailers/scss/sections/contact.scss
@@ -205,7 +205,7 @@
 					border: none;
 					h2 {
 						text-align: center;
-						margin-bottom: 0;
+						margin: 1.5em 0;
 					}
 					br {
 						display: none;
