--- a/premedia/edetailers/scss/sections/map.scss
+++ b/premedia/edetailers/scss/sections/map.scss
@@ -2,6 +2,10 @@
 	text-align: center;
 	h2 {
 		color: $darkBlue;
+		display: inline-block;
+		br {
+			display: none;
+		}
 	}
 	.map-container {
 		width: 75vw;
@@ -22,12 +26,23 @@
 			}
 		}
 	}
+
 	@include mobile {
 		min-height: 70vh;
 		position: relative;
+		h2 {
+			margin: 1em 0;
+			br {
+				display: block;
+			}
+		}
+		.light-blue-underline {
+			border: none;
+		}
 		.map-container {
-			margin-top: 20vh;
-			width: 100%;
+			margin: 20vh 0;
+			width: 90vw;
+			max-width: 100%;
 			height: 30vh;
 		}
 	}
@@ -50,8 +65,6 @@
 		font-size: .9em;
 		color: #3A3A9D;
 	}
-}
-@include mobile {
 }
 /* ZOOM CONTROLS
 .jvectormap-container:hover {
