--- a/premedia/edetailers/scss/sections/services.scss
+++ b/premedia/edetailers/scss/sections/services.scss
@@ -73,7 +73,8 @@
 			padding: 1em;
 			border-radius: 5px;
 			h3 {
-				margin-bottom: .5em; 
+				margin-bottom: .4em;
+				font-size: 1.2em;
 			}
 			p {
 				margin: 0;
