--- a/premedia/edetailers/scss/navbar.scss
+++ b/premedia/edetailers/scss/navbar.scss
@@ -144,7 +144,7 @@ nav {
 				right: -1em;
 				z-index: 4;
 				border-left: 2px solid $darkBlue;
-				box-shadow: -15px 0px 50px -8px rgba(0,0,0,0.5);
+				box-shadow: -15px 0px 50px -8px rgba(0,0,0,.5);
 
 				background: white;
 				list-style-type: none;
