--- a/premedia/edetailers/scss/sections/home.scss
+++ b/premedia/edetailers/scss/sections/home.scss
@@ -17,13 +17,14 @@
 		}
 		width: 100%;
 
-		.frame-container {
+		.slider {
 			border: 1vw solid;
 			border-image-source: url('../img/slides/slide_frame.png');
 			border-image-slice: 30;
 			background-color: black;
 			border-radius: 1em;
-			box-shadow: 35px 10px 72px -16px rgba(0,0,0,0.44);
+			box-shadow: 35px 10px 72px -16px rgba(0,0,0,.44);
+			opacity: 0;
 
 			img {
 				background-color: black;
@@ -78,7 +79,7 @@
 		}
 		.slide-container {
 			padding-top: 1em;
-			.frame-container {
+			.slider {
 				border-width: 2vw;
 				border-radius: .5em;
 				img {
