--- a/premedia/edetailers/scss/variables.scss
+++ b/premedia/edetailers/scss/variables.scss
@@ -3,4 +3,4 @@ $lightGray: #F4F4F4;
 $lightBlue: #83D0F4;
 $transparent: rgba(58, 58, 157,0);
 
-$easeInOut: cubic-bezier(0.250, 0.460, 0.450, 0.940);
+$easeInOut: cubic-bezier(.250, .460, .450, .940);
