--- a/premedia/edetailers/scss/sections/home.scss
+++ b/premedia/edetailers/scss/sections/home.scss
@@ -86,8 +86,8 @@
 					border-radius: 0;
 				}
 			}
-			.pager-container .pager .bb-link-wrapper {
-				font-size: .8em;
+			.pager-container .pager .bb-link-wrapper a {
+				font-size: .9em;
 			}
 		}
 	}
