--- a/premedia/edetailers/scss/sections/how-we-work.scss
+++ b/premedia/edetailers/scss/sections/how-we-work.scss
@@ -81,12 +81,15 @@
 	}
 	@include mobile {
 		background-color: #EFEFEF;
+		.section-title h2 {
+			margin: 1.5em 0;
+		}
 		br {
 			display: block;
 		}
 		.work-selector {
 			display: flex;
-			margin: 2.5em 0;
+			margin: 3.5em 0 2.5em;
 		}
 		.work-container {
 			display: block;
