--- a/premedia/edetailers/css/style.css
+++ b/premedia/edetailers/css/style.css
@@ -150,10 +150,7 @@ nav {
     nav .nav-container .left .nav-logo img {
       height: 2.75em;
       -webkit-transition: filter 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-      transition: filter 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-      transition-delay: .4s; }
-    nav .nav-container.no-delay .left .nav-logo img, nav .nav-container.no-delay #navigation-menu.right .nav-item, nav .nav-container.no-delay #navigation-menu.right .nav-item a {
-      transition-delay: 0s; }
+      transition: filter 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94); }
     @media (min-width: 769px) {
       nav .nav-container.dark-bg .left .nav-logo img {
         filter: brightness(0) invert(1); }
@@ -173,7 +170,6 @@ nav {
       padding: .25em 0;
       border-bottom: 3px solid rgba(58, 58, 157, 0);
       transition: all 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-      transition-delay: .4s;
       position: relative;
       z-index: 5; }
       nav .nav-container #navigation-menu .nav-item a {
@@ -181,8 +177,7 @@ nav {
         cursor: pointer;
         color: #000;
         text-decoration: none;
-        transition: color 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        transition-delay: .4s; }
+        transition: color 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94); }
       nav .nav-container #navigation-menu .nav-item.active {
         border-color: #3A3A9D; }
     @media (max-width: 768px) {
@@ -384,18 +379,23 @@ nav {
         width: auto;
         margin: .75em 3em; } }
 @media (min-width: 769px) {
-  #eDetailers.animated .info-panel {
-    animation: fade-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-    animation-delay: .5s; }
-  #eDetailers.animated .image-panel img {
-    animation: fade-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
-    #eDetailers.animated .image-panel img:nth-of-type(1) {
-      animation-delay: 1.3s; }
-    #eDetailers.animated .image-panel img:nth-of-type(2) {
-      animation-delay: 1.5s; }
-  #eDetailers.animated .service-panel {
-    animation: slide-in-up 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-    animation-delay: 2s; } }
+  #eDetailers {
+    opacity: 0;
+    transition: opacity .1s linear; }
+    #eDetailers.animated {
+      opacity: 1; }
+      #eDetailers.animated .info-panel {
+        animation: fade-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+        animation-delay: .5s; }
+      #eDetailers.animated .image-panel img {
+        animation: fade-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+        #eDetailers.animated .image-panel img:nth-of-type(1) {
+          animation-delay: 1.3s; }
+        #eDetailers.animated .image-panel img:nth-of-type(2) {
+          animation-delay: 1.5s; }
+      #eDetailers.animated .service-panel {
+        animation: slide-in-up 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+        animation-delay: 2s; } }
 
 #certifications {
   background-color: #EFEFEF;
@@ -481,15 +481,20 @@ nav {
           font-size: 3em; }
         #certifications #cert-modal .modal-content .close-btn:hover {
           color: #767676; }
-  #certifications.animated .grid .column {
-    animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
-    #certifications.animated .grid .column:nth-of-type(1) {
-      animation-delay: 1s; }
-    #certifications.animated .grid .column:nth-of-type(2) {
-      animation-delay: 1.5s; }
-    #certifications.animated .grid .column:nth-of-type(3) {
-      animation-delay: 2s; }
   @media (min-width: 769px) {
+    #certifications .container {
+      opacity: 0;
+      transition: opacity .1s linear; }
+    #certifications.animated .container {
+      opacity: 1; }
+    #certifications.animated .grid .column {
+      animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+      #certifications.animated .grid .column:nth-of-type(1) {
+        animation-delay: 1s; }
+      #certifications.animated .grid .column:nth-of-type(2) {
+        animation-delay: 1.5s; }
+      #certifications.animated .grid .column:nth-of-type(3) {
+        animation-delay: 2s; }
     #certifications .mobile {
       display: none; } }
   @media (max-width: 768px) {
@@ -570,6 +575,11 @@ nav {
     #services .transcreation h3 {
       color: #fff; }
   @media (min-width: 769px) {
+    #services .container {
+      opacity: 0;
+      transition: opacity .1s linear; }
+    #services.animated .container {
+      opacity: 1; }
     #services.animated .column {
       animation: slide-in-up 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
       #services.animated .column:nth-of-type(1) {
@@ -676,6 +686,11 @@ nav {
     #how-we-work .btn-container {
       margin: 2em 0; } }
 @media (min-width: 769px) {
+  #how-we-work .container {
+    opacity: 0;
+    transition: opacity .1s linear; }
+  #how-we-work.animated .container {
+    opacity: 1; }
   #how-we-work.animated .work-container .column, #how-we-work.animated .work-container .dot {
     animation: fade-in 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
     #how-we-work.animated .work-container .column.one, #how-we-work.animated .work-container .dot.one {
@@ -717,6 +732,9 @@ nav {
       height: 100%;
       color: #c5c5c5; }
   @media (min-width: 769px) {
+    #map .jvectormap-marker {
+      opacity: 0;
+      transition: opacity .1s linear; }
     #map.animated .jvectormap-marker {
       animation: fade-in 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
       #map.animated .jvectormap-marker:nth-of-type(1) {
@@ -770,7 +788,7 @@ nav {
       #map .light-blue-underline {
         border: none; }
       #map .map-container {
-        margin: 20vh 0;
+        margin: 10vh 0;
         width: 90vw;
         max-width: 100%;
         height: 30vh; } }
@@ -783,9 +801,9 @@ nav {
   padding: .5em;
   font-size: initial;
   margin: 5em;
-  font-family: 'Lato'; }
+  font-family: 'Lato', sans-serif; }
   .jvectormap-tip .country-name {
-    font-family: 'Varela';
+    font-family: 'Varela', sans-serif;
     text-transform: uppercase;
     font-size: .9em;
     color: #3A3A9D; }
@@ -882,6 +900,11 @@ nav {
         #about .business-panel .column h3, #about .business-panel .column p {
           margin: 0; } }
   @media (min-width: 769px) {
+    #about .container {
+      opacity: 0;
+      transition: opacity .1s linear; }
+    #about.animated .container {
+      opacity: 1; }
     #about.animated .info-panel {
       animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
       animation-delay: .5s; }
