--- a/premedia/edetailers/scss/sections/map.scss
+++ b/premedia/edetailers/scss/sections/map.scss
@@ -54,7 +54,7 @@
 
 // jVectorMap default overrides
 .jvectormap-tip {
-	background: white;
+	background: #fff;
 	color: #292929;
 	border: solid 2px #3A3A9D;
 	border-radius: 0;
