--- a/premedia/edetailers/scss/sections/certifications.scss
+++ b/premedia/edetailers/scss/sections/certifications.scss
@@ -55,7 +55,7 @@
 			}
 			.cert-content {
 				padding: 4em;
-				background-color: white;
+				background-color: #fff;
 				border-radius: 5px;
 				box-shadow: 0 10px 72px -16px rgba(0,0,0,0.44);
 
