--- a/premedia/edetailers/scss/style.scss
+++ b/premedia/edetailers/scss/style.scss
@@ -36,9 +36,9 @@ p {
 	height: 100vh;
 	overflow-y: auto;
 	overflow-x: hidden;
-	-ms-scroll-snap-type: y mandatory;
-	scroll-snap-type: y mandatory;
-	scroll-snap-stop: always;
+	// -ms-scroll-snap-type: y mandatory;
+	scroll-snap-type: y proximity;
+	// scroll-snap-stop: always;
 	.section {
 		display: flex;
 		height: 100vh;
