--- a/premedia/edetailers/scss/sections/certifications.scss
+++ b/premedia/edetailers/scss/sections/certifications.scss
@@ -1,6 +1,8 @@
 #certifications {
 	background-color: #EFEFEF;
 	position: relative;
+	height: initial !important;
+	padding: 5em 0;
 	.section-title {
 		margin-bottom: 5em;
 	}
@@ -8,10 +10,13 @@
 		.column {
 			width: 33%;
 			.cert-logo-container {
-				margin: 1em;
-				padding: 7em 0;
-				border-radius: 15em;
+				width: 17.5em;
+				height: 17.5em;
+				border-radius: 17.5em;
 				cursor: pointer;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 				img {
 					max-width: 80%;
 				}
@@ -31,8 +36,8 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 100vw;
-		height: 100vh;
+		width: 100%;
+		height: 100%;
 
 		display: none;
 		align-items: center;
@@ -54,7 +59,7 @@
 				display: flex;
 			}
 			.cert-content {
-				padding: 4em;
+				padding: 3em;
 				background-color: #fff;
 				border-radius: 5px;
 				box-shadow: 0 10px 72px -16px rgba(0,0,0,0.44);
